2011-04-08  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QWebPage MIME type handling inconsistency with other web browsers
        https://bugs.webkit.org/show_bug.cgi?id=46968

        Implementing mime type sniffing based on
        http://tools.ietf.org/html/draft-abarth-mime-sniff-06.

        * WebCore.pro:
        * platform/network/MIMESniffing.cpp: Added.
        (MagicNumbers::dataSizeNeededForImageSniffing):
        (MagicNumbers::maskedCompare):
        (MagicNumbers::checkSpaceOrBracket):
        (MagicNumbers::compare):
        (MagicNumbers::findMIMEType):
        (MagicNumbers::findSimpleMIMEType):
        (MagicNumbers::textOrBinaryTypeSniffingProcedure):
        (MagicNumbers::unknownTypeSniffingProcedure):
        (MagicNumbers::imageTypeSniffingProcedure):
        (MagicNumbers::checkText):
        (MagicNumbers::checkRDF):
        (MagicNumbers::skipTag):
        (MagicNumbers::feedTypeSniffingProcedure):
        (MIMESniffer::MIMESniffer):
        * platform/network/MIMESniffing.h: Added.
        (MIMESniffer::dataSize):
        (MIMESniffer::sniff):
        (MIMESniffer::isValid):
        * platform/network/NetworkingContext.h:
        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyWrapper::QNetworkReplyWrapper):
        (WebCore::QNetworkReplyWrapper::release):
        (WebCore::QNetworkReplyWrapper::receiveMetaData):
        (WebCore::QNetworkReplyWrapper::receiveSniffedMIMEType):
        (WebCore::QNetworkReplyWrapper::emitMetaDataChanged):
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):
        (WebCore::QNetworkReplyHandler::sendNetworkRequest):
        (WebCore::QNetworkReplyHandler::start):
        * platform/network/qt/QNetworkReplyHandler.h:
        (WebCore::QNetworkReplyWrapper::advertisedMIMEType):
        (WebCore::QNetworkReplyWrapper::mimeType):
        * platform/network/qt/QtMIMETypeSniffer.cpp: Added.