@@ -1,3 +1,14 @@
+2011-04-15  Fridrich Strba  <fridrich.strba@bluewin.ch>
+
+        Reviewed by Martin Robinson.
+
+        Evaluate PLATFORM(GTK) before the all-encompassing OS(WINDOWS)
+        test. This allows Windows build of WebKit GTK to chose the right
+        path.
+        https://bugs.webkit.org/show_bug.cgi?id=58576
+
+        * platform/FileSystem.h:
+
 2011-04-08  Luiz Agostini  <luiz.agostini@openbossa.org>
 
         Reviewed by Kenneth Rohde Christiansen.
